added homepage content, photos

--- a/index.html
+++ b/index.html
@@ -33,7 +33,89 @@
   <body>
     <div class="hero">
       <h1>Bled</h1>
-      <h2>A magical place from a fairytale</h2>
+      <h3>A magical place from a fairytale</h3>
     </div>
+    <!-- <div class="activities">ACTIVITIES ICONS</div>--->
+    <div class="container">
+      <div class="row mt-5">
+        <div class="col">
+          <h2>Bled Castle</h2>
+          <p>
+            Bled Castle is a medieval castle built on a precipice above the city
+            of Bled in Slovenia, overlooking Lake Bled. According to written
+            sources, it is the oldest Slovenian castle and is currently one of
+            the most visited tourist attractions in Slovenia. Nowadays, the
+            castle is employed as a historical museum with a collection that
+            represents the lake's history.
+          </p>
+        </div>
+        <div class="col d-none d-sm-block">
+          <img
+            class="img-fluid photos"
+            src="images/bled-castle-1.webp"
+            alt="Bled castle built on a rock"
+          />
+        </div>
+      </div>
+      <div class="row mt-5">
+        <div class="col d-none d-sm-block">
+          <img
+            class="img-fluid photos"
+            src="images/church-on-island.webp"
+            alt="Bled castle built on a rock"
+          />
+        </div>
+        <div class="col">
+          <h2>Church on Bled Island</h2>
+          <p>
+            The lake surrounds Bled Island. The island has several buildings,
+            the main one being the pilgrimage church dedicated to the Assumption
+            of Mary, built in its current form near the end of the 17th century,
+            and decorated with remains of Gothic frescos from around 1470 in the
+            presbyterium and rich Baroque equipment.
+          </p>
+        </div>
+      </div>
+      <div class="row mt-5">
+        <div class="col">
+          <h2>Pletna boat</h2>
+          <p>
+            The traditional transportation to Bled Island is a wooden boat known
+            as a pletna. The word pletna is a borrowing from Bavarian German
+            Plätten 'flat-bottomed boat'. Some sources claim the pletna was used
+            in Lake Bled as early as 1150 AD, but most historians date the first
+            boats to 1590 AD.
+          </p>
+        </div>
+        <div class="col d-none d-sm-block">
+          <img
+            class="img-fluid photos"
+            src="images/pletna-2.webp"
+            alt="Pletna boat on lake"
+          />
+        </div>
+      </div>
+      <div class="row mt-5">
+        <div class="col d-none d-sm-block">
+          <img
+            class="img-fluid photos"
+            src="images/kremsnita-3.jpeg"
+            alt="Bled castle built on a rock"
+          />
+        </div>
+        <div class="col">
+          <h2>Kremšnita</h2>
+          <p>
+            The area's culinary specialty, a cream pastry (kremna rezina or
+            kremšnita 'Cremeschnitte'), was designated a protected dish of
+            designated origin in 2016 by the Slovene government. Although
+            various Slovene cream pastries date back to the Habsburg era, the
+            current "official" recipe was created in 1953 by Ištvan Lukačević,
+            the former manager of the Hotel Park's patisserie.
+          </p>
+        </div>
+      </div>
+    </div>
+    <footer class="mt-5"></footer>
   </body>
 </html>
