added learn more button

--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@
     <div class="hero">
       <h1>Bled</h1>
       <h3>A magical place from a fairytale</h3>
+      <div class="learn-btn">
+        <a href="#" class="btn btn-outline-light">Learn more</a>
+      </div>
     </div>
     <!-- <div class="activities">ACTIVITIES ICONS</div>--->
     <div class="container">
