added navbar w/ menu, footer, icons div, extra .html files

--- a/index.html
+++ b/index.html
@@ -31,6 +31,66 @@
     />
   </head>
   <body>
+    <nav class="navbar sticky-top navbar-expand-lg navbar-light bg-light">
+      <div class="container-fluid">
+        <a class="navbar-brand navbar-logo" href="#">Bled</a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNavDropdown"
+          aria-controls="navbarNavDropdown"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div
+          class="collapse navbar-collapse d-lg-flex justify-content-around"
+          id="navbarNavDropdown"
+        >
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="#">Home</a>
+            </li>
+            <li class="nav-item dropdown">
+              <a
+                class="nav-link dropdown-toggle"
+                href="#"
+                id="navbarDropdownMenuLink"
+                role="button"
+                data-bs-toggle="dropdown"
+                aria-expanded="false"
+              >
+                What to do & see
+              </a>
+              <ul
+                class="dropdown-menu"
+                aria-labelledby="navbarDropdownMenuLink"
+              >
+                <li><a class="dropdown-item" href="#"></a></li>
+                <li><a class="dropdown-item" href="#"></a></li>
+                <li>
+                  <a class="dropdown-item" href="#">Something else here</a>
+                </li>
+              </ul>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Events</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Directions</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">History</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Useful Info</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
     <div class="hero">
       <h1>Bled</h1>
       <h3>A magical place from a fairytale</h3>
@@ -38,7 +98,7 @@
         <a href="#" class="btn btn-outline-light">Learn more</a>
       </div>
     </div>
-    <!-- <div class="activities">ACTIVITIES ICONS</div>--->
+    <div class="activities">ACTIVITIES ICONS</div>
     <div class="container">
       <div class="row mt-5">
         <div class="col">
@@ -119,6 +179,9 @@
         </div>
       </div>
     </div>
-    <footer class="mt-5"></footer>
+    <footer class="mt-5">
+      Website created by <a href="">mrs. MacAlister</a> and is open-sourced on
+      <a href="">GitHub</a>
+    </footer>
   </body>
 </html>
