added content to history.html, directions.html, contacts.html

--- a/history.html
+++ b/history.html
@@ -30,5 +30,138 @@
       rel="stylesheet"
     />
   </head>
-  <body></body>
+  <body>
+    <nav class="navbar sticky-top navbar-expand-lg navbar-light bg-light">
+      <div class="container-fluid">
+        <a class="navbar-brand navbar-logo" href="#">Bled</a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNavDropdown"
+          aria-controls="navbarNavDropdown"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div
+          class="collapse navbar-collapse d-lg-flex justify-content-around"
+          id="navbarNavDropdown"
+        >
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link" aria-current="page" href="index.html">Home</a>
+            </li>
+            <li class="nav-item dropdown">
+              <a
+                class="nav-link dropdown-toggle"
+                href="#"
+                id="navbarDropdownMenuLink"
+                role="button"
+                data-bs-toggle="dropdown"
+                aria-expanded="false"
+              >
+                What to do & see
+              </a>
+              <ul
+                class="dropdown-menu"
+                aria-labelledby="navbarDropdownMenuLink"
+              >
+                <li><a class="dropdown-item" href="#"></a></li>
+                <li><a class="dropdown-item" href="#"></a></li>
+                <li>
+                  <a class="dropdown-item" href="#">Something else here</a>
+                </li>
+              </ul>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Events</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="directions.html">Directions</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" href="history.html">History</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="about.html">Contacts</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+    <div><h3 class="title">History of Bled</h3></div>
+    <div class="container">
+      <p>
+        <strong>Bled</strong> (German: Veldes, in older sources also Feldes) is
+        a town on Lake Bled in the Upper Carniolan region of northwestern
+        Slovenia. It is the administrative seat of the Municipality of Bled. It
+        is most notable as a popular tourist destination in the Upper Carniola
+        region and in Slovenia as whole, attracting visitors from abroad too.
+      </p>
+      <p>
+        The town was first attested in written sources as Ueldes in 1004 (and as
+        Veldes in 1011). The etymology of the name is unknown and it is believed
+        to be of pre-Slavic origin. The German name of the town, Veldes, was
+        either borrowed from Old Slovene *Beldъ before AD 800 or is derived from
+        the same pre-Slavic source as the Slovene name.
+      </p>
+      <h2>Early Medieval History</h2>
+      <p>
+        A settlement area since Mesolithic times, the present-day locality
+        probably arose about 600 during the Slavic settlement of the Eastern
+        Alps. After the Slavic principality of Carantania was conquered by
+        Frankish forces in 788, the area came under Bavarian influence.
+      </p>
+
+      <h2>Feudal estate</h2>
+      <p>
+        German King Henry II ceded ownership of the area in 1004 to Albuin,
+        Bishop of Brixen as a sign of gratitude for the assistance the Church
+        was giving to the king in his attempt to strengthen imperial rule in
+        that part of northern Italy. In 1011, Henry II signed another deed of
+        donation that added the castle and an area of land the size of thirty
+        king's farms. That area, between the Sava Bohinjka and the Sava Dolinka,
+        became known as the Lordship of Veldes (German: Herrschaft Veldes).
+        These donations marked a turning point in the history of Bled and, for
+        the following 800 years, the area remained under the sovereignty of the
+        prince-bishops of Brixen.
+        <br />
+        The bishops very seldom visited their remote possession 300 km away.
+        Initially, the lordship was administered by ministeriales (bonded
+        knights), castellans, and castle staff in accordance with feudal
+        practices, but in the middle of the 14th century the prince-bishops
+        decided instead to lease the estate. Under one of the 16th-century
+        lessees, Bled Castle became a Protestant stronghold for a time. When the
+        leasehold era came to an end, the prince-bishops began to appoint
+        governors to manage their distant lordship. Until the middle of the 18th
+        century, those administrators were exclusively aristocratic, but later
+        they included non-nobles. <br />
+        In 1803, Brixen's rule came to an end when the prince-bishopric was
+        secularized in the course of the German Mediatization. Bled then came
+        under Austrian sovereignty but in 1808, along with Carniola, it was
+        included in the Napoleonic Illyrian Provinces. It returned under
+        Austrian sovereignty in 1813, and in 1838 the Austrian Emperor returned
+        Bled to the bishops of Brixen as a private estate. With the abolition of
+        the feudal system in 1848, Bled ceased to have the characteristics of a
+        feudal economy and from then on it experienced several changes in
+        ownership, including industrialists and a bank. <br />
+        After the dissolution of Austria-Hungary in 1918, Bled and the rest of
+        Carniola came under the rule of the Kingdom of Yugoslavia and became a
+        summer domicile of the ruling House of Karađorđević, a tradition that
+        Yugoslav leader Josip Broz Tito continued when he built his residence
+        here in 1947.
+      </p>
+      <h2>Modern Settlement</h2>
+      <p>
+        Today's town began to form in the mid-19th century from the villages of
+        Grad, Mlino, Rečica, Zagorice, and Želeče, which were encircling the
+        lake. At that time, farmers started to sell the land along the eastern
+        lakeshore to wealthy individuals for their villas, and the villages of
+        Grad, Zagorice, and Želeče began to merge. Bled was officially
+        recognised as a town in 1960.
+      </p>
+    </div>
+  </body>
 </html>
