--- a/index.html
+++ b/index.html
@@ -76,16 +76,16 @@
               </ul>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Events</a>
+              <a class="nav-link" href="events.html">Events</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Directions</a>
+              <a class="nav-link" href="directions.html">Directions</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">History</a>
+              <a class="nav-link" href="history.html">History</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Useful Info</a>
+              <a class="nav-link" href="about.html">Contacts</a>
             </li>
           </ul>
         </div>
@@ -93,7 +93,7 @@
     </nav>
     <div class="hero">
       <h1>Bled</h1>
-      <h3>A magical place from a fairytale</h3>
+      <h3 class="heroH3">A magical place from a fairytale</h3>
       <div class="learn-btn">
         <a href="#" class="btn btn-outline-light">Learn more</a>
       </div>
