--- a/events.html
+++ b/events.html
@@ -30,5 +30,91 @@
       rel="stylesheet"
     />
   </head>
-  <body></body>
+  <body>
+    <nav class="navbar sticky-top navbar-expand-lg navbar-light bg-light">
+      <div class="container-fluid">
+        <a class="navbar-brand navbar-logo" href="#">Bled</a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNavDropdown"
+          aria-controls="navbarNavDropdown"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div
+          class="collapse navbar-collapse d-lg-flex justify-content-around"
+          id="navbarNavDropdown"
+        >
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link" aria-current="page" href="index.html">Home</a>
+            </li>
+            <li class="nav-item dropdown">
+              <a
+                class="nav-link dropdown-toggle"
+                href="#"
+                id="navbarDropdownMenuLink"
+                role="button"
+                data-bs-toggle="dropdown"
+                aria-expanded="false"
+              >
+                What to do & see
+              </a>
+              <ul
+                class="dropdown-menu"
+                aria-labelledby="navbarDropdownMenuLink"
+              >
+                <li><a class="dropdown-item" href="#"></a></li>
+                <li><a class="dropdown-item" href="#"></a></li>
+                <li>
+                  <a class="dropdown-item" href="#">Something else here</a>
+                </li>
+              </ul>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" href="#">Events</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="directions.html">Directions</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="history.html">History</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="about.html">Contacts</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+    <div>
+      <h1>Events</h1>
+    </div>
+    <div class="container">
+      <div class="row border">
+        <div class="col-sm-6 border">
+          <div class="row">
+            <div class="col-sm-3">
+              <img src="images/bled-castle-2.jpeg" alt="" class="img-fluid" />
+            </div>
+            <div class="col-sm-3">
+              <h6>25. 03. 2022</h6>
+              <p>Location</p>
+            </div>
+            <div class="col-sm-2">
+              <h4>Title</h4>
+              <p>Description</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-6 border">
+          <img src="" alt="" />
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
