added footers, commented out pages in menu that aren't finished yet

--- a/directions.html
+++ b/directions.html
@@ -53,7 +53,7 @@
             <li class="nav-item">
               <a class="nav-link" aria-current="page" href="index.html">Home</a>
             </li>
-            <li class="nav-item dropdown">
+            <!-- <li class="nav-item dropdown">
               <a
                 class="nav-link dropdown-toggle"
                 href="#"
@@ -77,7 +77,7 @@
             </li>
             <li class="nav-item">
               <a class="nav-link" href="events.html">Events</a>
-            </li>
+            </li> -->
             <li class="nav-item">
               <a class="nav-link active" href="#">Directions</a>
             </li>
@@ -249,5 +249,9 @@
         </div>
       </div>
     </div>
+    <footer class="mt-5">
+      Website created by <a href="">mrs. MacAlister</a> and is open-sourced on
+      <a href="">GitHub</a>
+    </footer>
   </body>
 </html>
