--- a/history.html
+++ b/history.html
@@ -53,7 +53,7 @@
             <li class="nav-item">
               <a class="nav-link" aria-current="page" href="index.html">Home</a>
             </li>
-            <li class="nav-item dropdown">
+            <!--  <li class="nav-item dropdown">
               <a
                 class="nav-link dropdown-toggle"
                 href="#"
@@ -77,7 +77,7 @@
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">Events</a>
-            </li>
+            </li> -->
             <li class="nav-item">
               <a class="nav-link" href="directions.html">Directions</a>
             </li>
@@ -127,7 +127,8 @@
         These donations marked a turning point in the history of Bled and, for
         the following 800 years, the area remained under the sovereignty of the
         prince-bishops of Brixen.
-        <br />
+      </p>
+      <p>
         The bishops very seldom visited their remote possession 300 km away.
         Initially, the lordship was administered by ministeriales (bonded
         knights), castellans, and castle staff in accordance with feudal
@@ -137,7 +138,9 @@
         leasehold era came to an end, the prince-bishops began to appoint
         governors to manage their distant lordship. Until the middle of the 18th
         century, those administrators were exclusively aristocratic, but later
-        they included non-nobles. <br />
+        they included non-nobles.
+      </p>
+      <p>
         In 1803, Brixen's rule came to an end when the prince-bishopric was
         secularized in the course of the German Mediatization. Bled then came
         under Austrian sovereignty but in 1808, along with Carniola, it was
@@ -146,7 +149,9 @@
         Bled to the bishops of Brixen as a private estate. With the abolition of
         the feudal system in 1848, Bled ceased to have the characteristics of a
         feudal economy and from then on it experienced several changes in
-        ownership, including industrialists and a bank. <br />
+        ownership, including industrialists and a bank.
+      </p>
+      <p>
         After the dissolution of Austria-Hungary in 1918, Bled and the rest of
         Carniola came under the rule of the Kingdom of Yugoslavia and became a
         summer domicile of the ruling House of Karađorđević, a tradition that
@@ -163,5 +168,9 @@
         recognised as a town in 1960.
       </p>
     </div>
+    <footer class="mt-5">
+      Website created by <a href="">mrs. MacAlister</a> and is open-sourced on
+      <a href="">GitHub</a>
+    </footer>
   </body>
 </html>
