--- a/about.html
+++ b/about.html
@@ -53,7 +53,7 @@
             <li class="nav-item">
               <a class="nav-link" aria-current="page" href="index.html">Home</a>
             </li>
-            <li class="nav-item dropdown">
+            <!-- <li class="nav-item dropdown">
               <a
                 class="nav-link dropdown-toggle"
                 href="#"
@@ -77,7 +77,7 @@
             </li>
             <li class="nav-item">
               <a class="nav-link" href="events.html">Events</a>
-            </li>
+            </li> -->
             <li class="nav-item">
               <a class="nav-link" href="directions.html">Directions</a>
             </li>
@@ -92,67 +92,69 @@
       </div>
     </nav>
     <div class="container">
-      <section>
-        <div>
-          <div class="row">
-            <div class="col-sm-12">
+      <section class="form-container">
+        <!-- <div class="row">
+            <div class="col-sm-6">
               <div class="row">
-                <div class="col-sm-8 col-sm-offset-2">
-                  <div>
-                    <h2>Contact us</h2>
-                  </div>
-                  <form method="post" data-form-title="CONTACT US">
-                    <input type="hidden" data-form-email="true" />
-                    <div class="form-group">
-                      <input
-                        type="text"
-                        class="form-control"
-                        name="name"
-                        required=""
-                        placeholder="Name*"
-                        data-form-field="Name"
-                      />
-                    </div>
-                    <div class="form-group">
-                      <input
-                        type="email"
-                        class="form-control"
-                        name="email"
-                        required=""
-                        placeholder="Email*"
-                        data-form-field="Email"
-                      />
-                    </div>
-                    <div class="form-group">
-                      <input
-                        type="tel"
-                        class="form-control"
-                        name="phone"
-                        placeholder="Phone"
-                        data-form-field="Phone"
-                      />
-                    </div>
-                    <div class="form-group">
-                      <textarea
-                        class="form-control"
-                        name="message"
-                        placeholder="Message"
-                        rows="7"
-                        data-form-field="Message"
-                      ></textarea>
-                    </div>
-                    <div>
-                      <button type="submit" class="btn btn-lg btn-danger">
-                        CONTACT US
-                      </button>
-                    </div>
-                  </form>
-                </div>
+                <div class="col-sm-8 col-sm-offset-2"> -->
+
+        <h3 class="title">Contact us</h3>
+
+        <form method="post" data-form-title="CONTACT US">
+          <input type="hidden" data-form-email="true" />
+          <div class="form-group">
+            <input
+              type="text"
+              class="form-control"
+              name="name"
+              required=""
+              placeholder="Name*"
+              data-form-field="Name"
+            />
+          </div>
+          <div class="form-group">
+            <input
+              type="email"
+              class="form-control"
+              name="email"
+              required=""
+              placeholder="Email*"
+              data-form-field="Email"
+            />
+          </div>
+          <div class="form-group">
+            <input
+              type="tel"
+              class="form-control"
+              name="phone"
+              placeholder="Phone"
+              data-form-field="Phone"
+            />
+          </div>
+          <div class="form-group">
+            <textarea
+              class="form-control"
+              name="message"
+              placeholder="Message"
+              rows="7"
+              data-form-field="Message"
+            ></textarea>
+          </div>
+          <div class="btn-div">
+            <button type="submit" class="btn btn-lg btn-danger">
+              Contact us
+            </button>
+          </div>
+        </form>
+        <!-- </div>
               </div>
             </div>
-          </div>
-        </div>
+          </div> -->
       </section>
     </div>
+    <footer class="mt-5">
+      Website created by <a href="">mrs. MacAlister</a> and is open-sourced on
+      <a href="">GitHub</a>
+    </footer>
   </body>
 </html>
