--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <li class="nav-item">
               <a class="nav-link active" aria-current="page" href="#">Home</a>
             </li>
-            <li class="nav-item dropdown">
+            <!-- <li class="nav-item dropdown">
               <a
                 class="nav-link dropdown-toggle"
                 href="#"
@@ -77,7 +77,7 @@
             </li>
             <li class="nav-item">
               <a class="nav-link" href="events.html">Events</a>
-            </li>
+            </li> -->
             <li class="nav-item">
               <a class="nav-link" href="directions.html">Directions</a>
             </li>
@@ -98,7 +98,7 @@
         <a href="#" class="btn btn-outline-light">Learn more</a>
       </div>
     </div>
-    <div class="activities">ACTIVITIES ICONS</div>
+    <!--<div class="activities">ACTIVITIES ICONS</div>-->
     <div class="container">
       <div class="row mt-5">
         <div class="col">
