improved CSS in history, updated a logo font

--- a/directions.html
+++ b/directions.html
@@ -29,6 +29,18 @@
       href="https://fonts.googleapis.com/css2?family=IM+Fell+English+SC&display=swap"
       rel="stylesheet"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Passions+Conflict&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <nav class="navbar sticky-top navbar-expand-lg navbar-light bg-light">
@@ -85,166 +97,170 @@
               <a class="nav-link" href="history.html">History</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="about.html">Contacts</a>
+              <a class="nav-link" href="about.html">Contact</a>
             </li>
           </ul>
         </div>
       </div>
     </nav>
-    <div>
-      <h3 class="title">How to reach Bled</h3>
-    </div>
-    <div class="accordion" id="accordionPanelsStayOpenExample">
-      <div class="accordion-item">
-        <h2 class="accordion-header" id="panelsStayOpen-headingOne">
-          <button
-            class="accordion-button"
-            type="button"
-            data-bs-toggle="collapse"
-            data-bs-target="#panelsStayOpen-collapseOne"
-            aria-expanded="true"
-            aria-controls="panelsStayOpen-collapseOne"
+    <div class="container">
+      <div>
+        <h3 class="title">How to reach Bled</h3>
+      </div>
+      <div class="accordion" id="accordionPanelsStayOpenExample">
+        <div class="accordion-item">
+          <h2 class="accordion-header" id="panelsStayOpen-headingOne">
+            <button
+              class="accordion-button"
+              type="button"
+              data-bs-toggle="collapse"
+              data-bs-target="#panelsStayOpen-collapseOne"
+              aria-expanded="true"
+              aria-controls="panelsStayOpen-collapseOne"
+            >
+              By car
+            </button>
+          </h2>
+          <div
+            id="panelsStayOpen-collapseOne"
+            class="accordion-collapse collapse show"
+            aria-labelledby="panelsStayOpen-headingOne"
           >
-            By car
-          </button>
-        </h2>
-        <div
-          id="panelsStayOpen-collapseOne"
-          class="accordion-collapse collapse show"
-          aria-labelledby="panelsStayOpen-headingOne"
-        >
-          <div class="accordion-body">
-            <p>
-              Bled is 47 km away from the Austrian border (Wurzenpaß) or Italy
-              (Fusine Laghi – Rateče). <br />
-              To reach Bled you can take the highway (direction Ljubljana) and
-              then the exit toward Lipce or Bled. <br />
-              Alternatively, you can take the regional road Kranjska
-              Gora–Jesenice, passing by Blejska Dobrava čez Kočno and Gorje or
-              the motorway from Jesenice, passing by Žirovnica and Lesce to
-              Bled. <br />
-              Bled is 50 km away from Ljubljana. The easiest access is the
-              highway toward Jesenice, which you leave at the exit toward Bled
-              or Lipce. The other option is to drive on the regional road,
-              passing by Medvode, Kranj, Naklo and Radovljica. <br />
-              More traffic information in Slovenia
-              <a href="https://www.promet.si/portal/en/1traffic-conditions.aspx"
-                >https://www.promet.si/portal/en/1traffic-conditions.aspx</a
-              >. <br />
-              Contact for road assistance in Slovenia
-              <a href="https://www.amzs.si/en">https://www.amzs.si/en</a>.
-            </p>
-            <h6>Vignette</h6>
-            <p>
-              If you are driving on a highway, do not forget to purchase a
-              vignette, which is obligatory in order to drive on Slovenian
-              highways and on bypasses around Ljubljana. Road that require the
-              vignette are marked with signs. You may purchase vignettes at
-              service stations near the border with Slovenia or in Slovenia.
-              Vignettes must be purchased before driving on highways. <br />
-              For more information about vignettes visit our website
-              <a href="https://www.dars.si/">https://www.dars.si/</a>.
-            </p>
+            <div class="accordion-body">
+              <p>
+                Bled is 47 km away from the Austrian border (Wurzenpaß) or Italy
+                (Fusine Laghi – Rateče). <br />
+                To reach Bled you can take the highway (direction Ljubljana) and
+                then the exit toward Lipce or Bled. <br />
+                Alternatively, you can take the regional road Kranjska
+                Gora–Jesenice, passing by Blejska Dobrava čez Kočno and Gorje or
+                the motorway from Jesenice, passing by Žirovnica and Lesce to
+                Bled. <br />
+                Bled is 50 km away from Ljubljana. The easiest access is the
+                highway toward Jesenice, which you leave at the exit toward Bled
+                or Lipce. The other option is to drive on the regional road,
+                passing by Medvode, Kranj, Naklo and Radovljica. <br />
+                More traffic information in Slovenia
+                <a
+                  href="https://www.promet.si/portal/en/1traffic-conditions.aspx"
+                  >https://www.promet.si/portal/en/1traffic-conditions.aspx</a
+                >. <br />
+                Contact for road assistance in Slovenia
+                <a href="https://www.amzs.si/en">https://www.amzs.si/en</a>.
+              </p>
+              <h6>Vignette</h6>
+              <p>
+                If you are driving on a highway, do not forget to purchase a
+                vignette, which is obligatory in order to drive on Slovenian
+                highways and on bypasses around Ljubljana. Road that require the
+                vignette are marked with signs. You may purchase vignettes at
+                service stations near the border with Slovenia or in Slovenia.
+                Vignettes must be purchased before driving on highways. <br />
+                For more information about vignettes visit our website
+                <a href="https://www.dars.si/">https://www.dars.si/</a>.
+              </p>
+            </div>
           </div>
         </div>
-      </div>
-      <div class="accordion-item">
-        <h2 class="accordion-header" id="panelsStayOpen-headingTwo">
-          <button
-            class="accordion-button collapsed"
-            type="button"
-            data-bs-toggle="collapse"
-            data-bs-target="#panelsStayOpen-collapseTwo"
-            aria-expanded="false"
-            aria-controls="panelsStayOpen-collapseTwo"
+        <div class="accordion-item">
+          <h2 class="accordion-header" id="panelsStayOpen-headingTwo">
+            <button
+              class="accordion-button collapsed"
+              type="button"
+              data-bs-toggle="collapse"
+              data-bs-target="#panelsStayOpen-collapseTwo"
+              aria-expanded="false"
+              aria-controls="panelsStayOpen-collapseTwo"
+            >
+              By bus
+            </button>
+          </h2>
+          <div
+            id="panelsStayOpen-collapseTwo"
+            class="accordion-collapse collapse"
+            aria-labelledby="panelsStayOpen-headingTwo"
           >
-            By bus
-          </button>
-        </h2>
-        <div
-          id="panelsStayOpen-collapseTwo"
-          class="accordion-collapse collapse"
-          aria-labelledby="panelsStayOpen-headingTwo"
-        >
-          <div class="accordion-body">
-            <p>
-              Bled is connected with <strong>regular bus lines</strong> with the
-              immediate surroundings and all larger cities of Slovenia. There
-              are regular bus rides
-              <strong
-                >from Ljubljana going through Kranj and Radovljica.</strong
-              >
-              Buses also operate from the direction of Bohinj and Jesenice. The
-              central Bled bus station is located on the north-east part of the
-              lake, 3 minutes walking distance from the lake, at the
-              cross-section of the roads Cesta svobode and Grajska cesta. The
-              Bled Union bus station is located at the entrance to Bled, 5
-              minutes walking distance from the lake. <br />
-              Bus schedule:
-              <a href="https://www.ap-ljubljana.si/en/">
-                https://www.ap-ljubljana.si/en/</a
-              >
-              or <a href="https://arriva.si/en/">https://arriva.si/en/</a>.
-              <br />
-              The operator FlixBus provides long-distance bus services to Bled.
-              FlixBus will also take to some of Europe’s major cities: Salzburg,
-              Munich, Budapest, Prague, Milan, Zagreb and many others. Coach
-              schedule
-              <a href="https://www.flixbus.co.uk/coach/bled"
-                >https://www.flixbus.co.uk/coach/bled</a
-              >.
-            </p>
+            <div class="accordion-body">
+              <p>
+                Bled is connected with <strong>regular bus lines</strong> with
+                the immediate surroundings and all larger cities of Slovenia.
+                There are regular bus rides
+                <strong
+                  >from Ljubljana going through Kranj and Radovljica.</strong
+                >
+                Buses also operate from the direction of Bohinj and Jesenice.
+                The central Bled bus station is located on the north-east part
+                of the lake, 3 minutes walking distance from the lake, at the
+                cross-section of the roads Cesta svobode and Grajska cesta. The
+                Bled Union bus station is located at the entrance to Bled, 5
+                minutes walking distance from the lake. <br />
+                Bus schedule:
+                <a href="https://www.ap-ljubljana.si/en/">
+                  https://www.ap-ljubljana.si/en/</a
+                >
+                or <a href="https://arriva.si/en/">https://arriva.si/en/</a>.
+                <br />
+                The operator FlixBus provides long-distance bus services to
+                Bled. FlixBus will also take to some of Europe’s major cities:
+                Salzburg, Munich, Budapest, Prague, Milan, Zagreb and many
+                others. Coach schedule
+                <a href="https://www.flixbus.co.uk/coach/bled"
+                  >https://www.flixbus.co.uk/coach/bled</a
+                >.
+              </p>
+            </div>
           </div>
         </div>
-      </div>
-      <div class="accordion-item">
-        <h2 class="accordion-header" id="panelsStayOpen-headingThree">
-          <button
-            class="accordion-button collapsed"
-            type="button"
-            data-bs-toggle="collapse"
-            data-bs-target="#panelsStayOpen-collapseThree"
-            aria-expanded="false"
-            aria-controls="panelsStayOpen-collapseThree"
+        <div class="accordion-item">
+          <h2 class="accordion-header" id="panelsStayOpen-headingThree">
+            <button
+              class="accordion-button collapsed"
+              type="button"
+              data-bs-toggle="collapse"
+              data-bs-target="#panelsStayOpen-collapseThree"
+              aria-expanded="false"
+              aria-controls="panelsStayOpen-collapseThree"
+            >
+              By train
+            </button>
+          </h2>
+          <div
+            id="panelsStayOpen-collapseThree"
+            class="accordion-collapse collapse"
+            aria-labelledby="panelsStayOpen-headingThree"
           >
-            By train
-          </button>
-        </h2>
-        <div
-          id="panelsStayOpen-collapseThree"
-          class="accordion-collapse collapse"
-          aria-labelledby="panelsStayOpen-headingThree"
-        >
-          <div class="accordion-body">
-            <p>
-              <strong>The railway station Lesce-Bled</strong> is located along
-              the railway line Oste (Münich – Salzburg – Villach – Ljubljana –
-              Belgrade – Istanbul – Athens).
-              <br />
-              The railway station is 4 km away from the centre of Bled. Bled can
-              be reached by bus (the Bled bus station is on the opposite side of
-              the railway station), taxi or on foot taking an asphalted road
-              intended for pedestrians and cyclists.
-              <br />
-              The Bled Jezero railway station lies along the railway line
-              Villach – Jesenice – Nova Gorica – Koper or Gorizia (Italy). It is
-              just 1.5 km away from the centre of Bled and you can walk there,
-              take a taxi or ride the tourist train. During summertime shuttle
-              buses and hop-on hop-off buses also stop at the station. <br />
-              Train schedule
-              <a href="https://www.slo-zeleznice.si/en/"
-                >https://www.slo-zeleznice.si/en/</a
-              >
-              or
-              <a href="https://www.bahn.com/en/view/index.shtml"
-                >https://www.bahn.com/en/view/index.shtml</a
-              >
-              or
-              <a href="https://www.thetrainline.com/"
-                >https://www.thetrainline.com/</a
-              >
-              .
-            </p>
+            <div class="accordion-body">
+              <p>
+                <strong>The railway station Lesce-Bled</strong> is located along
+                the railway line Oste (Münich – Salzburg – Villach – Ljubljana –
+                Belgrade – Istanbul – Athens).
+                <br />
+                The railway station is 4 km away from the centre of Bled. Bled
+                can be reached by bus (the Bled bus station is on the opposite
+                side of the railway station), taxi or on foot taking an
+                asphalted road intended for pedestrians and cyclists.
+                <br />
+                The Bled Jezero railway station lies along the railway line
+                Villach – Jesenice – Nova Gorica – Koper or Gorizia (Italy). It
+                is just 1.5 km away from the centre of Bled and you can walk
+                there, take a taxi or ride the tourist train. During summertime
+                shuttle buses and hop-on hop-off buses also stop at the station.
+                <br />
+                Train schedule
+                <a href="https://www.slo-zeleznice.si/en/"
+                  >https://www.slo-zeleznice.si/en/</a
+                >
+                or
+                <a href="https://www.bahn.com/en/view/index.shtml"
+                  >https://www.bahn.com/en/view/index.shtml</a
+                >
+                or
+                <a href="https://www.thetrainline.com/"
+                  >https://www.thetrainline.com/</a
+                >
+                .
+              </p>
+            </div>
           </div>
         </div>
       </div>
