--- a/history.html
+++ b/history.html
@@ -29,6 +29,18 @@
       href="https://fonts.googleapis.com/css2?family=IM+Fell+English+SC&display=swap"
       rel="stylesheet"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Passions+Conflict&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <nav class="navbar sticky-top navbar-expand-lg navbar-light bg-light">
@@ -85,7 +97,7 @@
               <a class="nav-link active" href="history.html">History</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="about.html">Contacts</a>
+              <a class="nav-link" href="about.html">Contact</a>
             </li>
           </ul>
         </div>
