--- a/index.html
+++ b/index.html
@@ -104,10 +104,14 @@
       </div>
     </nav>
     <div class="hero">
-      <h1>Bled</h1>
-      <h3 class="heroH3">A magical place from a fairytale</h3>
-      <div class="learn-btn">
-        <a href="#" class="btn btn-outline-light">Learn more</a>
+      <div class="hero-main-title">
+        <h1>Bled</h1>
+      </div>
+      <div class="hero-subtitle">
+        <h3 class="heroH3">A magical place from a fairytale</h3>
+        <div class="learn-btn">
+          <a href="#" class="btn btn-outline-light">Learn more</a>
+        </div>
       </div>
     </div>
     <!--<div class="activities">ACTIVITIES ICONS</div>-->
@@ -192,8 +196,10 @@
       </div>
     </div>
     <footer class="mt-5">
-      Website created by <a href="">mrs. MacAlister</a> and is open-sourced on
-      <a href="">GitHub</a>
+      Website created by
+      <a href="https://verenamacalister.netlify.app/">mrs. MacAlister</a> and is
+      open-sourced on
+      <a href="https://github.com/mrsMacAlister">GitHub</a>
     </footer>
   </body>
 </html>
