contact button position

--- a/about.html
+++ b/about.html
@@ -153,7 +153,7 @@
             ></textarea>
           </div>
           <div class="btn-div">
-            <button type="submit" class="btn btn-lg btn-danger">
+            <button type="submit" class="btn btn-lg btn-danger contact-btn">
               Contact us
             </button>
           </div>
