--- a/history.html
+++ b/history.html
@@ -45,7 +45,7 @@
   <body>
     <nav class="navbar sticky-top navbar-expand-lg navbar-light bg-light">
       <div class="container-fluid">
-        <a class="navbar-brand navbar-logo" href="#">Bled</a>
+        <a class="navbar-brand navbar-logo" href="index.html">Bled</a>
         <button
           class="navbar-toggler"
           type="button"
