updated footer links

--- a/index.html
+++ b/index.html
@@ -197,9 +197,11 @@
     </div>
     <footer class="mt-5">
       Website created by
-      <a href="https://verenamacalister.netlify.app/">mrs. MacAlister</a> and is
-      open-sourced on
-      <a href="https://github.com/mrsMacAlister">GitHub</a>
+      <a href="https://verenamacalister.netlify.app/" target="_blank"
+        >mrs. MacAlister</a
+      >
+      and is open-sourced on
+      <a href="https://github.com/mrsMacAlister" target="_blank">GitHub</a>
     </footer>
   </body>
 </html>
