--- a/directions.html
+++ b/directions.html
@@ -266,8 +266,12 @@
       </div>
     </div>
     <footer class="mt-5">
-      Website created by <a href="">mrs. MacAlister</a> and is open-sourced on
-      <a href="">GitHub</a>
+      Website created by
+      <a href="https://verenamacalister.netlify.app/" target="_blank"
+        >mrs. MacAlister</a
+      >
+      and is open-sourced on
+      <a href="https://github.com/mrsMacAlister" target="_blank">GitHub</a>
     </footer>
   </body>
 </html>
