--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Bled</title>
+    <link rel="icon" href="images/castle-icon.jpg" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -110,7 +111,7 @@
       <div class="hero-subtitle">
         <h3 class="heroH3">A magical place from a fairytale</h3>
         <div class="learn-btn">
-          <a href="#" class="btn btn-outline-light">Learn more</a>
+          <a href="history.html" class="btn btn-outline-light">Learn more</a>
         </div>
       </div>
     </div>
