--- a/directions.html
+++ b/directions.html
@@ -234,7 +234,7 @@
                 <strong>The railway station Lesce-Bled</strong> is located along
                 the railway line Oste (Münich – Salzburg – Villach – Ljubljana –
                 Belgrade – Istanbul – Athens). <br />
-               
+
                 The railway station is 4 km away from the centre of Bled. Bled
                 can be reached by bus (the Bled bus station is on the opposite
                 side of the railway station), taxi or on foot taking an
@@ -267,11 +267,9 @@
     </div>
     <footer class="mt-5">
       Website created by
-      <a href="https://verenamacalister.netlify.app/" target="_blank"
-        >mrs. MacAlister</a
-      >
+      <a href="https://mrsmacalister.com/" target="_blank">mrs. MacAlister</a>
       and is open-sourced on
-      <a href="https://github.com/mrsMacAlister" target="_blank">GitHub</a>
+      <a href="https://github.com/mrsMacAlister/Bled-Project" target="_blank">GitHub</a>
     </footer>
   </body>
 </html>
