--- a/index.html
+++ b/index.html
@@ -198,11 +198,11 @@
     </div>
     <footer class="mt-5">
       Website created by
-      <a href="https://verenamacalister.netlify.app/" target="_blank"
-        >mrs. MacAlister</a
-      >
+      <a href="https://mrsmacalister.com/" target="_blank">mrs. MacAlister</a>
       and is open-sourced on
-      <a href="https://github.com/mrsMacAlister" target="_blank">GitHub</a>
+      <a href="https://github.com/mrsMacAlister/Bled-Project" target="_blank"
+        >GitHub</a
+      >
     </footer>
   </body>
 </html>
